# neo4j-knowledge-graph-llm

./: bot.py  pyproject.toml
solutions/: agent.py  llm.py  prompt_template.py  scoped.py
solutions/tools/: cypher.py  vector.py
