[tool.poetry]
name = "neo4j-knowledge-graph-llm"
version = "0.1.0"
description = ""
authors = ["Takao Mizuno <takao.mizuno110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.12"
langchain = "^0.1.1"
openai = "^1.7.2"
neo4j-driver = "^5.16.0"
streamlit = "1.24.0"
langchainhub = "^0.1.14"
langchain-openai = "^0.0.2.post1"
langchain-core = "^0.1.12"
langchain-community = "^0.0.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
